k8s/security/00-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: fintech
spec:
  podSelector: {}
  policyTypes:
  - Ingress
