k8s/security/01-allow-transaction-to-notification.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-transaction-to-notification
  namespace: fintech
spec:
  podSelector:
    matchLabels:
      app: notification-service
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: transaction-api
    ports:
    - protocol: TCP
      port: 8081
