k8s/security/02-allow-prometheus-on-transaction-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-on-transaction-api
  namespace: fintech
spec:
  podSelector:
    matchLabels:
      app: transaction-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          # This label is present on the monitoring namespace by default with kube-prometheus-stack
          kubernetes.io/metadata.name: monitoring
    ports:
    - protocol: TCP
      port: 8080
